--- a/apps/nest/package.json
+++ b/apps/nest/package.json
@@ -34,6 +34,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "firebase-admin": "^13.1.0",
+    "passport-firebase-jwt": "^1.2.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
